# machine-learning-code-snippets

./: Dockerfile  LICENSE  README.md  check_environment.ipynb  docker-compose.yml
deep-learning-scrach-2/: Dockerfile  README.md  Rnnlm.pkl  docker-compose.yml
deep-learning-scrach-2/ch06/: train_rnnlm.py
pyproject/: Dockerfile  pyproject.toml
