[tool.poetry]
name = "mymachinelearningcontainer"
version = "0.1.0"
description = ""
authors = ["takafumi takizawa <zawa78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
torch = {version = "^2.1.0+cu121", source = "torch_cu121"}
torchvision = {version = "^0.16.0+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.1.0+cu121", source = "torch_cu121"}
black = "^23.10.1"
jupyterlab = "3.6.6"
jupyterlab-code-formatter = "^2.2.1"
jupyterlab-widgets = "^3.0.9"
ipywidgets = "^8.1.1"
import-ipynb = "^0.1.4"
lckr-jupyterlab-variableinspector = "^3.0.9"
pandas = "^2.1.2"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.1"
catboost = "^1.2.2"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
